<resources>
    <string name="app_name">LazyBird</string>
    <!-- login -->
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="hello">Hello</string>
    <string name="create_account">Create account</string>
    <string name="i_don_t_have_an_account">I don\'t have an Account></string>
    <string name="i_already_have_an_account">I already have an Account></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="choose_avatar">choose an avatar:</string>

    <!-- nav bar -->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_write">Write</string>
    <string name="search_blog_people_tag">Search Blog/People/Tag</string>
    <string name="maybe_you_are_interested_in">Maybe you are interested in…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search!</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="loading">Loading</string>
    <string name="failed_to_load_post">Failed to load post</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="bio">Bio</string>
    <string name="display_name">Display Name</string>
    <string name="save">Save</string>


</resources>