<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/start_fragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.blog_e.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.blog_e.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_write"
        android:name="com.example.blog_e.ui.write.WriteFragment"
        android:label="@string/title_write"
        tools:layout="@layout/fragment_write" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.blog_e.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.blog_e.ui.login.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_fragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_login_fragment_to_sign_up_fragment"
            app:destination="@id/sign_up_fragment" />
    </fragment>

    <fragment
        android:id="@+id/sign_up_fragment"
        android:name="com.example.blog_e.ui.signUp.SignUpFragment"
        android:label="sign_up_fragment"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_sign_up_fragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_sign_up_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />
    </fragment>

    <fragment
        android:id="@+id/start_fragment"
        android:name="com.example.blog_e.ui.login.StartFragment"
        android:label="start_fragment"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_start_fragment_to_login_fragment"
            app:destination="@id/login_fragment" />
        <action
            android:id="@+id/action_start_fragment_to_sign_up_fragment"
            app:destination="@id/sign_up_fragment" />
    </fragment>

</navigation>