<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtextView"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/create_avatar_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_avatar"
                android:textSize="20sp" />

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/Circular"
                android:id="@+id/avatar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/btn_round"
                android:contentDescription="@string/choose_avatar"
                android:scaleType="centerInside"
                android:src="@drawable/astronaut_horse_0" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDisplayName"
                android:hint="@string/display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBio"
                android:minLines="4"
                android:lines="4"
                android:gravity="top"
                android:hint="@string/bio"
                android:maxLines="6"
                android:inputType="textMultiLine|textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"            >
            <Button
                    android:id="@+id/generate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Generate Description"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"       >
            <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
            <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
            <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>




        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        android:background="#B3000000"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/loading"
            />
    </LinearLayout>
</FrameLayout>